@@ -79,6 +79,7 @@ static void usage (FILE *file)
              "               [ --loopback OR -L loopback-port-number ]\n"
              // "               [ --port-max OR -p maximum-number-of-ports]\n"
              "               [ --verbose OR -v ]\n"
+			 "               [ --replace-registry OR -r ]\n"
              "               [ --silent OR -s ]\n"
              "               [ --sync OR -S ]\n"
              "               [ --version OR -V ]\n"
@@ -262,6 +263,7 @@ int main(int argc, char* argv[])
                                        { "name", 0, 0, 'n' },
                                        { "unlock", 0, 0, 'u' },
                                        { "realtime", 0, 0, 'R' },
+									   { "replace-registry", 0, 0, 'r' },
                                        { "loopback", 0, 0, 'L' },
                                        { "realtime-priority", 1, 0, 'P' },
                                        { "timeout", 1, 0, 't' },
@@ -279,6 +281,7 @@ int main(int argc, char* argv[])
     JSList * driver_params;
     int driver_nargs = 1;
     int show_version = 0;
+	int replace_registry = 0;
     int sync = 0;
     int i;
     int rc;
@@ -329,6 +332,10 @@ int main(int argc, char* argv[])
             case 'P':
                 realtime_priority = atoi(optarg);
                 break;
+				
+			case 'r':
+				replace_registry = 1;
+				break;
 
             case 'R':
                 realtime = 1;
@@ -414,7 +421,7 @@ int main(int argc, char* argv[])
 
     copyright (stdout);
 
-    rc = jack_register_server (server_name);
+    rc = jack_register_server (server_name, replace_registry);
     switch (rc) {
         case EEXIST:
             fprintf (stderr, "`%s' server already active\n", server_name);
